# NerdMiner_v2

./: .gitignore  GenerateXMLDPI.code-workspace  Git Info.txt  LICENSE  M5PAPER_TOUCH_OPTIMIZATION.md  NerdMinerLog.txt  NerdMinerV2.ino  Otthon bányász 1  README.md  SDCard.cpp  auto_firmware_version.py  desktop.ini  index.html  manifest.json  mining.cpp  mining.h  nvMemory.cpp  package-lock.json  partitions_16mb.csv  platformio - copia.ini  platformio.ini  post_build_merge.py
3d Files/: NerdMinerv2-Soporte1.stl  NerdMinerv2_TAPA.stl
3d_files/: NerdCase_withButtons_byJoaquin.stl  NerdMinerv2_CAJA.stl  NerdMinerv2_SecurePins.stl  T-QT_COV-A09.stl  T-QT_COV-B09.stl  T-QT_COV-C08.stl
Lib/: myFonts.h
M8AX - Pantallas Del NerdMinerV2 Y Ficheros/: NTPClient.cpp  WiFiManager.cpp  wm_strings_en.h
SLS/: Themes.slt  han-wt32.sll  han-wt32.spj  han-wt32_events.py
dashboard/: Dockerfile  (+8 more)
lib/hansolov2/: CMakeLists.txt  filelist.txt  library.json  lv_conf.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lib/hansolov2/components/: ui_comp_hook.c
lib/hansolov2/fonts/: ui_font_calculator128.c  ui_font_calculator16.c  ui_font_star24.c  ui_font_star32.c  ui_font_start16.c
lib/hansolov2/images/: ui_img_1552732429.c  ui_img_back_back_png.c  ui_img_back_clock_png.c  ui_img_back_home_png.c  ui_img_back_splash_png.c  ui_img_back_stats_png.c  ui_img_clock_png.c  ui_img_home_png.c  ui_img_metal2_png.c  ui_img_sky_png.c  ui_img_splash_png.c  ui_img_stats_png.c
lib/hansolov2/screens/: ui_ClockScreen.c  ui_HomeScreen.c  ui_SettingsScreen.c  ui_SplashScreen.c  ui_StatsScreen.c
(+326 files in other folders)
